--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "2.6.10",
-    "vuetify": "2.5.1"
+    "vue": "2.6.14",
+    "vuetify": "2.5.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "3.6.0",
@@ -25,7 +25,10 @@
     "env": {
       "node": true
     },
-    "extends": ["plugin:vue/essential", "eslint:recommended"],
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
     "rules": {},
     "parserOptions": {
       "parser": "babel-eslint"
@@ -36,7 +39,15 @@
       "autoprefixer": {}
     }
   },
-  "browserslist": ["> 1%", "last 2 versions", "not ie <= 8"],
-  "keywords": ["bridge", "minecraft", "bridge-plugin"],
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ],
+  "keywords": [
+    "bridge",
+    "minecraft",
+    "bridge-plugin"
+  ],
   "description": "Texture Set Generator extension for bridge. editor"
 }
